test/types/type_variables/deitz/part1/test_clone_class1b.good
test_clone_class1b.chpl:2: In function 'x':
test_clone_class1b.chpl:2: error: type mismatch in assignment from real to int
